src/objects/inscor__Inventory_Line__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_Condition_Code__c</fullName>
        <label>Legacy Condition Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Accrued_Repair_Cost__c</fullName>
        <label>Accrued Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Acquisition_Cost__c</fullName>
        <label>Acquisition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Batch_LOT__c</fullName>
        <label>Batch/LOT#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Box_Size__c</fullName>
        <label>Box Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4x4</fullName>
                </value>
                <value>
                    <fullName>12x6</fullName>
                </value>
                <value>
                    <fullName>12x2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__CSN__c</fullName>
        <label>CSN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__CSO__c</fullName>
        <description>Cycles since overhaul</description>
        <inlineHelpText>Cycles since last overhaul.</inlineHelpText>
        <label>CSO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_Barcode_ID_1__c</fullName>
        <label>Conversion Barcode ID 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_Barcode_ID_2__c</fullName>
        <label>Conversion Barcode ID 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_Tag_Agency__c</fullName>
        <label>Conversion Tag Agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Cycle_Limit__c</fullName>
        <label>Cycle Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Cycles_Remaining__c</fullName>
        <label>Cycles Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Duplicate_SN__c</fullName>
        <description>This field is automatically populated based on the SN duplication definition as implemented in the Process Builder: &quot;Process Builder - Inventory - Duplicate Field Fill&quot;. Duplicate prevention is normally defined as a concatenation of PN+SN + MFR Code on inventory records where qty &gt; 0. NOTE: Script must be run manually to initially fill in this field for already existing records.</description>
        <inlineHelpText>This field is automatically populated based on the SN duplication definition as implemented in the Process Builder: &quot;Process Builder-Inventory-Duplicate Field Fill&quot;. Duplicate prevention is normally defined as a concatenation of PN+SN+Mfr Code when qty&gt;0.</inlineHelpText>
        <label>Duplicate SN</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__ESN_Text__c</fullName>
        <label>MSN/ESN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Extended_Acquisition_Cost__c</fullName>
        <formula>inscor__Acquisition_Cost__c * inscor__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Acquisition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Extended_Cost__c</fullName>
        <formula>inscor__Quantity__c * inscor__Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Extended_Repair_Cost__c</fullName>
        <formula>inscor__Repair_Cost__c * inscor__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Grouping_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grouping Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Inspected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Inspected_Date__c</fullName>
        <label>Inspected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Inspection_Notes__c</fullName>
        <label>Inspection Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Clasification__c</fullName>
        <label>Inventory Clasification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Grouping</label>
        <referenceTo>inscor__Inventory_Grouping__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__KIT_Lot__c</fullName>
        <label>KIT Lot #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Keyword__c</fullName>
        <formula>inscor__Product__r.inscor__Keyword__c</formula>
        <label>Keyword</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Kit_Revision__c</fullName>
        <label>Kit Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Last_Calibration_Date__c</fullName>
        <label>Last Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Last_Inspection_Date__c</fullName>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Last_Stock_Check_Date__c</fullName>
        <label>Last Stock Check Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>inscor__Inventory_Location__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__MFG_Name__c</fullName>
        <label>MFG Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__MFR_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFR Code</label>
        <referenceTo>inscor__Manufacturer_Code__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__MFR_Name__c</fullName>
        <formula>inscor__MFR_Code__r.inscor__Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Manifest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manifest</label>
        <referenceTo>inscor__Manifest__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Manufacture_Date__c</fullName>
        <label>Manufacture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Next_Calibration_Date__c</fullName>
        <label>Next Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Next_Inspection_Date__c</fullName>
        <label>Next Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__OEM_Packaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OEM Packaging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Original_Inventory_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Inventory Line</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Inventory (Original Inventory Line)</relationshipLabel>
        <relationshipName>Original_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Owned_by_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owned by Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory (Owned by Account)</relationshipLabel>
        <relationshipName>OwnedByAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Owner Code</label>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Parent_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Price_Date__c</fullName>
        <label>Price Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Protected_Reason__c</fullName>
        <label>Protected Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Property</fullName>
                </value>
                <value>
                    <fullName>Incident Related</fullName>
                </value>
                <value>
                    <fullName>Customer RMA</fullName>
                </value>
                <value>
                    <fullName>LOT Main</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Exchange Core</fullName>
                </value>
                <value>
                    <fullName>WO Part</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
                <value>
                    <fullName>Managed Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Protected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Assigned__c</fullName>
        <label>Quantity Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Available__c</fullName>
        <formula>(inscor__Quantity__c) -  (inscor__Quantity_Allocated__c + inscor__Quantity_on_Repair__c +  inscor__Quantity_on_Exchange__c + inscor__Quantity_on_Lease__c +  inscor__Quantity_on_WO__c + inscor__Quantity_Assigned__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Rejected__c</fullName>
        <label>Quantity Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_on_Exchange__c</fullName>
        <label>Quantity on Exchange</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_on_Lease__c</fullName>
        <label>Quantity on Lease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_on_RO_Issued__c</fullName>
        <label>Quantity on RO Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_on_Repair__c</fullName>
        <label>Quantity on Repair</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_on_WO__c</fullName>
        <label>Quantity on WO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA</label>
        <referenceTo>inscor__RMA__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quality-Cond</fullName>
                    <label>Quality-Mismatched Cond.</label>
                </value>
                <value>
                    <fullName>Quality-PN</fullName>
                    <label>Quality-Mismatched PN</label>
                </value>
                <value>
                    <fullName>Quality-Ppwk</fullName>
                    <label>Quality-Mismatched Ppwk</label>
                </value>
                <value>
                    <fullName>Order-Qty</fullName>
                    <label>Order-Mismatched Qty</label>
                </value>
                <value>
                    <fullName>Order-Packaging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Repair_Cost__c</fullName>
        <label>Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Type__c</fullName>
        <label>Repair Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Repair_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Serialized__c</fullName>
        <formula>inscor__Product__r.inscor__Serialized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serialized?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Source_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory (Source 2)</relationshipLabel>
        <relationshipName>Source2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specifies where the parts were obtained from and usually the vendor parts were purchased from. Used in Material Certifications for Obtained From information.</inlineHelpText>
        <label>Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory (Source)</relationshipLabel>
        <relationshipName>Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sub_Location__c</fullName>
        <label>Sub Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Suggested_Location__c</fullName>
        <label>Suggested Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__TSN__c</fullName>
        <label>TSN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__TSO__c</fullName>
        <description>Time since overhaul</description>
        <inlineHelpText>Time since last overhaul.</inlineHelpText>
        <label>TSO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Tag_Agency_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag Agency 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory (Tag Agency 2)</relationshipLabel>
        <relationshipName>TagAgency2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Tag_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>TagAgency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Tag_Date_2__c</fullName>
        <label>Tag Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Tag_Date__c</fullName>
        <label>Tag Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Tag_Reference__c</fullName>
        <label>Tag Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Tags__c</fullName>
        <inlineHelpText>Part Certification or conformance document type, Certificate Tyoes. NOTE: used in SPEC2, CET field.</inlineHelpText>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EASA Form 1</fullName>
                </value>
                <value>
                    <fullName>CASA Form 1</fullName>
                </value>
                <value>
                    <fullName>TCCA Form 1</fullName>
                </value>
                <value>
                    <fullName>CAAC AAC-038</fullName>
                </value>
                <value>
                    <fullName>Transfer Document</fullName>
                </value>
                <value>
                    <fullName>Certificate of Conformance</fullName>
                </value>
                <value>
                    <fullName>Certificate of Conformity</fullName>
                </value>
                <value>
                    <fullName>--</fullName>
                </value>
                <value>
                    <fullName>00001817</fullName>
                </value>
                <value>
                    <fullName>03/18 DUAL RELEASE</fullName>
                </value>
                <value>
                    <fullName>11/12 MFG COC</fullName>
                </value>
                <value>
                    <fullName>11/14 FAA 8130</fullName>
                </value>
                <value>
                    <fullName>15521</fullName>
                </value>
                <value>
                    <fullName>163542</fullName>
                </value>
                <value>
                    <fullName>2/18 DUAL RELEASE</fullName>
                </value>
                <value>
                    <fullName>3/18 DUAL RELEASE</fullName>
                </value>
                <value>
                    <fullName>3229896</fullName>
                </value>
                <value>
                    <fullName>3229898</fullName>
                </value>
                <value>
                    <fullName>4/18 DUAL RELEASE</fullName>
                </value>
                <value>
                    <fullName>4/18 FAA 8130</fullName>
                </value>
                <value>
                    <fullName>4/18 FAA 8130-3</fullName>
                </value>
                <value>
                    <fullName>5/16 FAA 8130-3</fullName>
                </value>
                <value>
                    <fullName>810570874</fullName>
                </value>
                <value>
                    <fullName>810570877</fullName>
                </value>
                <value>
                    <fullName>8130</fullName>
                </value>
                <value>
                    <fullName>8130 + Full trace</fullName>
                </value>
                <value>
                    <fullName>8130-3</fullName>
                </value>
                <value>
                    <fullName>Arjet</fullName>
                </value>
                <value>
                    <fullName>AT106</fullName>
                </value>
                <value>
                    <fullName>ATA 106</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Time_Limit__c</fullName>
        <label>Time Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Time_Remaining__c</fullName>
        <label>Time Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Cost__c</fullName>
        <formula>inscor__Acquisition_Cost__c +  inscor__Repair_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Trace_Type__c</fullName>
        <inlineHelpText>Identifies the type for the Trace. Used in SPEC2K as SOR.</inlineHelpText>
        <label>Trace Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>121</fullName>
                </value>
                <value>
                    <fullName>129</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Trace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specifies the company that the parts are officially traced to and synonymous with Last Operator unless traced to a 145. Used in SPEC2K as SRN field.</inlineHelpText>
        <label>Trace</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory (Trace)</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Warehouse__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>inscor__Warehouse__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Assembled Kits</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>Commercials_Owner_Code</fullName>
        <columns>NAME</columns>
        <columns>inscor__Product__c</columns>
        <columns>inscor__Keyword__c</columns>
        <columns>inscor__Condition_Code__c</columns>
        <columns>inscor__Owner_Code__c</columns>
        <columns>inscor__Serial_Number__c</columns>
        <columns>inscor__Quantity__c</columns>
        <columns>inscor__Expiration_Date__c</columns>
        <columns>inscor__Source__c</columns>
        <columns>inscor__Trace__c</columns>
        <columns>inscor__Tags__c</columns>
        <columns>inscor__Tag_Date__c</columns>
        <columns>inscor__Location__c</columns>
        <columns>inscor__Acquisition_Date__c</columns>
        <columns>inscor__Total_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Quantity_Available__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>inscor__Owner_Code__c</field>
            <operation>contains</operation>
            <value>commercial</value>
        </filters>
        <label>Commercials (Owner Code)</label>
        <sharedTo>
            <group>Commercial_Teardown</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>For_Learning_Purpose</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>inscor__Product__c</columns>
        <columns>inscor__Keyword__c</columns>
        <columns>inscor__Condition_Code__c</columns>
        <columns>inscor__Owner_Code__c</columns>
        <columns>inscor__Serial_Number__c</columns>
        <columns>inscor__Quantity__c</columns>
        <columns>inscor__External_Reference_ID__c</columns>
        <columns>inscor__Expiration_Date__c</columns>
        <columns>inscor__Source__c</columns>
        <columns>inscor__Trace__c</columns>
        <columns>inscor__Tags__c</columns>
        <columns>inscor__Tag_Date__c</columns>
        <columns>inscor__Location__c</columns>
        <columns>inscor__Acquisition_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Quantity_Available__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>inscor__Location__c</field>
            <operation>notEqual</operation>
            <value>civ</value>
        </filters>
        <filters>
            <field>inscor__Location__c</field>
            <operation>notEqual</operation>
            <value>civw</value>
        </filters>
        <label>For Learning Purpose</label>
        <sharedTo>
            <group>Commercial_Teardown</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inventory_List_for_Filters</fullName>
        <columns>NAME</columns>
        <columns>inscor__Product__c</columns>
        <columns>inscor__Keyword__c</columns>
        <columns>inscor__Condition_Code__c</columns>
        <columns>inscor__Owner_Code__c</columns>
        <columns>inscor__Serial_Number__c</columns>
        <columns>inscor__Quantity__c</columns>
        <columns>inscor__External_Reference_ID__c</columns>
        <columns>inscor__Expiration_Date__c</columns>
        <columns>inscor__Source__c</columns>
        <columns>inscor__Trace__c</columns>
        <columns>inscor__Tags__c</columns>
        <columns>inscor__Tag_Date__c</columns>
        <columns>inscor__Location__c</columns>
        <columns>inscor__Acquisition_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Quantity__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>inscor__Product__c</field>
            <operation>contains</operation>
            <value>g16</value>
        </filters>
        <label>Inventory List for Filters</label>
        <sharedTo>
            <group>Commercial_Teardown</group>
        </sharedTo>
    </listViews>
</CustomObject>